@@ -3,7 +3,7 @@
  *
  * This file is an amalgamation of the source files from GDBWIRE.
  *
- * It was created using gdbwire 1.0 and git revision b5ae67f.
+ * It was created using gdbwire 1.0 and git revision 229fae8.
  *
  * GDBWIRE is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -330,7 +330,11 @@ enum gdbwire_logger_level {
  * Any additional format arguments.
  */
 void gdbwire_logger_log(const char *file, int line,
-        enum gdbwire_logger_level level, const char *fmt, ...);
+        enum gdbwire_logger_level level, const char *fmt, ...)
+#ifdef __GNUC__
+        __attribute__((__format__(__printf__, 4, 5)))
+#endif
+        ;
 
 /* The macros intended to be used for logging */
 #define gdbwire_debug(fmt, ...)(gdbwire_logger_log(__FILE__, __LINE__, \
@@ -504,7 +508,11 @@ enum gdbwire_logger_level {
  * Any additional format arguments.
  */
 void gdbwire_logger_log(const char *file, int line,
-        enum gdbwire_logger_level level, const char *fmt, ...);
+        enum gdbwire_logger_level level, const char *fmt, ...)
+#ifdef __GNUC__
+        __attribute__((__format__(__printf__, 4, 5)))
+#endif
+        ;
 
 /* The macros intended to be used for logging */
 #define gdbwire_debug(fmt, ...)(gdbwire_logger_log(__FILE__, __LINE__, \
